--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -7,5 +7,24 @@
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
     <h1>Все новости</h1>
-    {{ news }}
+    <hr>
+    {% if news %}
+        <table>
+            <tr>
+                <td>Заголовок</td>
+                <td>Дата публикации</td>
+                <td>Текст статьи</td>
+            </tr>
+            {% for new in news %}
+                <tr>
+                    <td>{{ new.title }}</td>
+                    <td>{{ new.dateCreation|date:'d M Y' }}</td>
+                    <td>{{ new.text|truncatewords:20 }}</td>
+                </tr>
+            {% endfor %}
+
+        </table>
+    {% else %}
+        <h2>Новостей нет!</h2>
+    {% endif %}
 {% endblock content %}
