--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -7,6 +7,8 @@
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
     <h1>Все новости</h1>
+    <br>
+    <h3>Всего новостей: {{ news|length }}</h3>
     <hr>
     {% if news %}
         <table>
