--- a/news/templates/news/new.html
+++ b/news/templates/news/new.html
@@ -1,6 +1,8 @@
 <!--  наследуемся от шаблона default.html -->
 {% extends 'default.html' %}
 
+{% load custom_filters %}
+
 <!-- Название у нас будет New -->
 {% block title %}
     New
@@ -11,9 +13,9 @@
 
     <table>
         <tr>
-            <td>{{ new.title }}</td>
+            <td>{{ new.title|censor }}</td>
             <td>{{ new.dateCreation|date:'d M Y' }}</td>
-            <td>{{ new.text }}</td>
+            <td>{{ new.text|censor }}</td>
         </tr>
     </table>
 {% endblock content %}
