'DIRS': [os.path.join(BASE_DIR, 'news/templates/news')], add class Meta in class Category/news/models.py

--- a/news/templates/news/new.html
+++ b/news/templates/news/new.html
@@ -1,5 +1,5 @@
 <!--  наследуемся от шаблона default.html -->
-{% extends 'default.html' %}
+{% extends 'news/default.html' %}
 
 {% load custom_filters %}
 
