--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -1,5 +1,5 @@
 <!--  наследуемся от шаблона default.html -->
-{% extends 'default.html' %}
+{% extends 'news/default.html' %}
 
 {% load custom_filters %}
 
