--- a/news/templates/news/news_search.html
+++ b/news/templates/news/news_search.html
@@ -8,9 +8,18 @@
 
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
-    <h1>Все новости</h1>
+    <h1>Поиск новостей</h1>
     <br>
     <h3>Всего новостей: {{ total_count }} </h3>
+    <hr>
+
+    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
+    <form action="" method="get">
+        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+        {{ filterset.form.as_p }}
+        {# Добавим кнопку отправки данных формы #}
+        <input type="submit" value="Найти" />
+    </form>
     <hr>
 
     {% if news %}
