--- a/articles/templates/news/post.html
+++ b/articles/templates/news/post.html
@@ -1,16 +1,14 @@
 <!--  наследуемся от шаблона default.html -->
 {% extends 'news/default.html' %}
-
 {% load custom_filters %}
 
 <!-- Название у нас будет New -->
 {% block title %}
-    New
+    {{ new.categoryType }}
 {% endblock title %}
 
 <!-- В контенте на странице мы выводим саму новость, идентификатор которого был передан в url -->
 {% block content %}
-
     <table>
         <tr>
             <td>{{ new.title|censor }}</td>
