--- a/news/templates/news/posts_search.html
+++ b/news/templates/news/posts_search.html
@@ -2,15 +2,26 @@
 {% extends 'news/default.html' %}
 
 {% load custom_filters %}
+{# Отрабатывает пагинацию без сброса фильтров на форме #}
+{% load custom_tags %}
 
 <!-- Название у нас будет News -->
 {% block title %} News {% endblock title %}
 
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
-    <h1>Все новости</h1>
+    <h1>Поиск новостей</h1>
     <br>
     <h3>Всего новостей: {{ total_count }} </h3>
+    <hr>
+
+    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
+    <form action="" method="get">
+        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+        {{ filterset.form.as_p }}
+        {# Добавим кнопку отправки данных формы #}
+        <input type="submit" value="Найти"/>
+    </form>
     <hr>
 
     {% if news %}
@@ -35,13 +46,13 @@
         <h2>Новостей нет!</h2>
     {% endif %}
 
-        {# Добавляем пагинацию на страницу #}
+    {# Добавляем пагинацию на страницу с url_replace - реализовано в custom_tags #}
     {# Информация о предыдущих страницах #}
     {% if page_obj.has_previous %}
-        <a href="?page=1">1</a>
+        <a href="?{% url_replace page=1 %}">1</a>
         {% if page_obj.previous_page_number != 1 %}
             ...
-            <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
         {% endif %}
     {% endif %}
 
@@ -50,10 +61,10 @@
 
     {# Информация о следующих страницах #}
     {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+        <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
         {% if paginator.num_pages != page_obj.next_page_number %}
             ...
-            <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
         {% endif %}
     {% endif %}
 
