--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>News portal</title>
-</head>
-<p>Hello Gavrila Ivolgin</p>
-<body>
-
-</body>
-</html>
+{% extends 'default.html' %}
+{% block title %} App news portal {% endblock title %}
