--- a/news/templates/news/default.html
+++ b/news/templates/news/default.html
@@ -40,6 +40,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contacts/">Contact</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="#"
+                       onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Выйти</a>
+                    <form id="logout-form" action="{% url 'news:logout' %}" method="POST"
+                          style="display: none;">
+                        {% csrf_token %}
+                    </form>
+                </li>
             </ul>
         </div>
     </div>
