--- a/articles/templates/news/posts.html
+++ b/articles/templates/news/posts.html
@@ -1,5 +1,5 @@
 <!--  наследуемся от шаблона default.html -->
-{% extends 'news/default.html' %}
+{% extends 'news/../../../templates/default.html' %}
 
 {% load custom_filters %}
 
