--- a/templates/news/post.html
+++ b/templates/news/post.html
@@ -1,5 +1,5 @@
 <!--  наследуемся от шаблона default.html -->
-{% extends 'news/default.html' %}
+{% extends 'news/../default.html' %}
 {% load custom_filters %}
 
 <!-- Название у нас будет New -->
