--- a/templates/news/posts.html
+++ b/templates/news/posts.html
@@ -1,58 +1,59 @@
 <!--  наследуемся от шаблона default.html -->
-{% extends 'news/default.html' %}
+{% extends 'news/../default.html' %}
 
 {% load custom_filters %}
-{# Отрабатывает пагинацию без сброса фильтров на форме #}
-{% load custom_tags %}
 
 <!-- Название у нас будет News -->
-{% block title %} News {% endblock title %}
+{% block title %} News portal {% endblock title %}
 
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
-    <h1>Поиск новостей</h1>
+    <h1>Все новости</h1>
     <br>
     <h3>Всего новостей: {{ total_count }} </h3>
     <hr>
-
-    {# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
-    <form action="" method="get">
-        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
-        {{ filterset.form.as_p }}
-        {# Добавим кнопку отправки данных формы #}
-        <input type="submit" value="Найти"/>
-    </form>
-    <hr>
-
     {% if news %}
         <table>
             <tr>
                 <td>Заголовок</td>
                 <td>Дата публикации</td>
                 <td>Текст статьи</td>
+                <td>Дата добавления</td>
+
+                {% if perms.news.add_post or perms.news.change_post %}
+                    <td>Действия</td>
+                {% endif %}
             </tr>
+
             {% for new in news %}
                 <tr>
                     <td>{{ new.title|censor }}</td>
                     <td>{{ new.dateCreation|date:'d M Y' }}</td>
                     <td>{{ new.text|censor|truncatewords:20 }}</td>
                     <td>{{ new.added_at }}</td>
-
+                    <td>
+                        {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
+                        {% if perms.news.add_post %}
+                            <a href="{% url 'news:post_news_created' %}">Добавить</a>
+                        {% endif %}
+                        {% if perms.news.change_post %}
+                            <a href="{% url 'news:post_update' pk=new.id %}">Изменить</a>
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
-
         </table>
     {% else %}
         <h2>Новостей нет!</h2>
     {% endif %}
 
-    {# Добавляем пагинацию на страницу с url_replace - реализовано в custom_tags #}
+    {# Добавляем пагинацию на страницу #}
     {# Информация о предыдущих страницах #}
     {% if page_obj.has_previous %}
-        <a href="?{% url_replace page=1 %}">1</a>
+        <a href="?page=1">1</a>
         {% if page_obj.previous_page_number != 1 %}
             ...
-            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+            <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
         {% endif %}
     {% endif %}
 
@@ -61,10 +62,10 @@
 
     {# Информация о следующих страницах #}
     {% if page_obj.has_next %}
-        <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+        <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
         {% if paginator.num_pages != page_obj.next_page_number %}
             ...
-            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
         {% endif %}
     {% endif %}
 
