config LOGGING in settings

--- a/templates/news/posts.html
+++ b/templates/news/posts.html
@@ -1,72 +1,73 @@
 <!--  наследуемся от шаблона default.html -->
 {% extends 'news/../default.html' %}
-
 {% load custom_filters %}
+{% load cache %}
 
 <!-- Название у нас будет News -->
 {% block title %} News portal {% endblock title %}
 
 <!-- В контенте на странице мы выводим все новости -->
-{% block content %}
-    <h1>Все новости</h1>
-    <br>
-    <h3>Всего новостей: {{ total_count }} </h3>
-    <hr>
-    {% if news %}
-        <table>
-            <tr>
-                <td>Заголовок</td>
-                <td>Дата публикации</td>
-                <td>Текст статьи</td>
-                <td>Дата добавления</td>
-
-                {% if perms.news.add_post or perms.news.change_post %}
-                    <td>Действия</td>
-                {% endif %}
-            </tr>
-
-            {% for new in news %}
+{% cache 30 content %}
+    {% block content %}
+        <h1>Все новости</h1>
+        <br>
+        <h3>Всего новостей: {{ total_count }} </h3>
+        <hr>
+        {% if news %}
+            <table>
                 <tr>
-                    <td>{{ new.title|censor }}</td>
-                    <td>{{ new.dateCreation|date:'d M Y' }}</td>
-                    <td>{{ new.text|censor|truncatewords:20 }}</td>
-                    <td>{{ new.added_at }}</td>
-                    <td>
-                        {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
-                        {% if perms.news.add_post %}
-                            <a href="{% url 'news:post_news_created' %}">Добавить</a>
-                        {% endif %}
-                        {% if perms.news.change_post %}
-                            <a href="{% url 'news:post_update' pk=new.id %}">Изменить</a>
-                        {% endif %}
-                    </td>
+                    <td>Заголовок</td>
+                    <td>Дата публикации</td>
+                    <td>Текст статьи</td>
+                    <td>Дата добавления</td>
+
+                    {% if perms.news.add_post or perms.news.change_post %}
+                        <td>Действия</td>
+                    {% endif %}
                 </tr>
-            {% endfor %}
-        </table>
-    {% else %}
-        <h2>Новостей нет!</h2>
-    {% endif %}
 
-    {# Добавляем пагинацию на страницу #}
-    {# Информация о предыдущих страницах #}
-    {% if page_obj.has_previous %}
-        <a href="?page=1">1</a>
-        {% if page_obj.previous_page_number != 1 %}
-            ...
-            <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+                {% for new in news %}
+                    <tr>
+                        <td>{{ new.title|censor }}</td>
+                        <td>{{ new.dateCreation|date:'d M Y' }}</td>
+                        <td>{{ new.text|censor|truncatewords:20 }}</td>
+                        <td>{{ new.added_at }}</td>
+                        <td>
+                            {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
+                            {% if perms.news.add_post %}
+                                <a href="{% url 'news:post_news_created' %}">Добавить</a>
+                            {% endif %}
+                            {% if perms.news.change_post %}
+                                <a href="{% url 'news:post_update' pk=new.id %}">Изменить</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        {% else %}
+            <h2>Новостей нет!</h2>
         {% endif %}
-    {% endif %}
 
-    {# Информация о текущей странице #}
-    {{ page_obj.number }}
-
-    {# Информация о следующих страницах #}
-    {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
-        {% if paginator.num_pages != page_obj.next_page_number %}
-            ...
-            <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+        {# Добавляем пагинацию на страницу #}
+        {# Информация о предыдущих страницах #}
+        {% if page_obj.has_previous %}
+            <a href="?page=1">1</a>
+            {% if page_obj.previous_page_number != 1 %}
+                ...
+                <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+            {% endif %}
         {% endif %}
-    {% endif %}
 
-{% endblock content %}
+        {# Информация о текущей странице #}
+        {{ page_obj.number }}
+
+        {# Информация о следующих страницах #}
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+            {% if paginator.num_pages != page_obj.next_page_number %}
+                ...
+                <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+            {% endif %}
+        {% endif %}
+    {% endblock content %}
+{% endcache %}
