created index, about, contact.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,18 @@
 {% extends 'default.html' %}
-{% block title %} App news portal {% endblock title %}
+{% load static %}
+
+
+{% block content %}
+    <div class="container">
+        <div>
+            <div style="margin-left: 20px;">
+                <h3 style="margin-top: 20px;">Добро слона</h3>
+                <div style="text-align: justify;">
+                    <p>Добро слона – это проект, основной целью которого является разработка для органов
+                        предварительного расследования и свободное распространение приложений, направленных на
+                        автоматизацию рутинных задач и повышение результатов служебной деятельности.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
