--- a/templates/default.html
+++ b/templates/default.html
@@ -4,16 +4,15 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title> {% block title %} {% endblock title %}</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/my_css.css' %}" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
 
 </head>
 
@@ -22,7 +21,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Django flatpages</a>
+        <a class="navbar-brand" href="#">Моё хобби</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,23 +29,15 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/default/">Home
+                    <a class="nav-link" href="{% url 'index' %}">Главная
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about/">About</a>
+                    <a class="nav-link" href="{% url 'about' %}">Обо мне</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contacts/">Contact</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#"
-                       onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Выйти</a>
-                    <form id="logout-form" action="{% url 'news:logout' %}" method="POST"
-                          style="display: none;">
-                        {% csrf_token %}
-                    </form>
+                    <a class="nav-link" href="{% url 'contact' %}">Обратная связь</a>
                 </li>
             </ul>
         </div>
@@ -59,8 +50,6 @@
         <div class="col-lg-12 text-center">
             {% block content %}
                 {{ flatpage.content }}
-                <hr>
-
             {% endblock content %}
         </div>
     </div>
